--- a/react/frontend/components.json
+++ b/react/frontend/components.json
@@ -2,7 +2,7 @@
   "style": "default",
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "src/app/globals.css",
+    "css": "src/index.css",
     "baseColor": "zinc",
     "cssVariables": true
   },
