--- a/Striver/package.json
+++ b/Striver/package.json
@@ -11,12 +11,20 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
+    "@auth0/auth0-spa-js": "^2.2.0",
+    "@google/genai": "^1.6.0",
     "@material-tailwind/react": "^2.1.10",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.50.1",
     "@tabler/icons-react": "^3.34.0",
     "@tailwindcss/vite": "^4.1.10",
     "@tsparticles/engine": "^3.8.1",
@@ -24,12 +32,26 @@
     "@tsparticles/slim": "^3.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
+    "framer-motion": "^12.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "ldrs": "^1.1.7",
     "lucide-react": "^0.518.0",
-    "motion": "^12.18.1",
+    "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.18.2",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-toggle-dark-mode": "^1.1.1",
+    "remark": "^15.0.1",
+    "remark-code-screenshot": "^1.0.0",
+    "remark-gfm": "^4.0.1",
+    "simplex-noise": "^4.0.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
